client/app/components/flowchart/_flowchart.sass
.node-header
  font-size: 12px

.invalid-node-header
  fill: #bababa

.node-center-icon
  font-size: 72px

.node-rect
  stroke: #b1b1b1
  stroke-width: 2
  fill: white

.invalid-node-rect
  fill: #cdcdcd

.invalid-node-img
  opacity: .2

.node-toolbar
  border-left: solid 1px #b1b1b1
  border-right: solid 1px #b1b1b1
  border-bottom: solid 1px #b1b1b1
  border-radius: 5px
  background-color: #F7F1D7
  height: 28px
  padding-left: 8px

.node-toolbar-icons
  padding-right: 16px
  padding-top: 4px
  color: #0099d3
  font-size: 16px
  cursor: pointer

.svg-triangle polyline
  fill: #F7F1D7
  stroke: #b1b1b1
  stroke-width: 2

.connecting-mode-rec
  fill: #8a8a8a

.connecting-mode-label
  fill: white
  font-size: 16px

.connecting-mode-label-warning
  fill: red
  font-size: 16px

.connector-icons
  fill: #0099d3
  font-size: 16px
  cursor: pointer
  &:hover
    fill: #00384d

.mouseover-node-rect
  stroke: #b1b1b1
  stroke-width: 3

.selected-node-rect
  stroke: #0099d3
  stroke-width: 3

.connector-tooltip
  fill: #F1F1F1
  stroke: black
  stroke-width: 1

.connector-tooltip-text
  font-size: 10px

.connector-circle
  fill: white
  stroke: black
  stroke-width: 2

.mouseover-connector-circle
  fill: white
  stroke: black
  stroke-width: 3

.unconnected-circle
  fill: green
  stroke: black
  stroke-width: 2
  stroke-opacity: "0.8"

.mouseover-unconnected-circle
  fill: green
  stroke: black
  stroke-width: 3
  stroke-opacity: "0.8"

.connection-line
  stroke: gray
  stroke-width: 4
  fill: transparent

.mouseover-connection-line 
  stroke: gray
  stroke-width: 6
  fill: transparent

.selected-connection-line 
  stroke: red
  stroke-width: 4
  fill: transparent

.connection-endpoint 
  fill: gray

.selected-connection-endpoint 
  fill: red

.mouseover-connection-endpoint 
  fill: gray

.connection-name
  fill: black

.selected-connection-name
  fill: red

.mouseover-connection-name
  fill: black

.dragging-connection
  pointer-events: none

.dragging-connection-line 
  stroke: gray
  stroke-width: 3
  fill: transparent

.dragging-connection-endpoint 
  fill: gray

.draggable-container 
  border: solid 1px #d1d1d1

.drag-selection-rect 
  stroke: blue
  stroke-width: 2
  fill: transparent

.node-dialog-close
  font-size: 12px
  padding-top: 7px

.nodetoolbar-dialog
  position: fixed
  top: 19px
  left: -19px
  width: 300px
  margin-top: 4px
  padding: 8px

  .tag-list .label a
    color: #fff
    cursor: pointer

.tag-dialog
  left: 30px
  width: 353px

.node-tag-title
  font-weight: 600
  padding-top: 12px
  padding-bottom: 12px

.edit-dialog
  left: 5px

.arrow_box
  position: relative
  background: #ffffff
  border: 1px solid #514d52
  border-radius: 5px
  padding-left: 10px
  padding-right: 10px
  padding-bottom: 10px

.arrow_box:after, .arrow_box:before
  bottom: 100%
  left: 50%
  border: solid transparent
  content: " "
  height: 0
  width: 0
  position: absolute
  pointer-events: none

.arrow_box:after
  border-color: rgba(255, 255, 255, 0)
  border-bottom-color: #ffffff
  border-width: 8px
  margin-left: -41%

.arrow_box:before
  border-color: rgba(81, 77, 82, 0)
  border-bottom-color: #514d52
  border-width: 10px
  margin-left: -41.5%

